feat: Unify score import flow with reusable modifier, progress overlay, and single-parse metadata extraction

--- a/Clef/Sources/Resources/Localizable.xcstrings
+++ b/Clef/Sources/Resources/Localizable.xcstrings
@@ -74,6 +74,9 @@
         }
       }
     },
+    "Analyzing Metadata..." : {
+
+    },
     "Apply" : {
       "localizations" : {
         "ko" : {
@@ -185,6 +188,7 @@
       }
     },
     "Detected Metadata" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ko" : {
           "stringUnit" : {
@@ -665,6 +669,9 @@
           }
         }
       }
+    },
+    "Skip" : {
+
     },
     "Tags" : {
       "localizations" : {
