--- a/Clef/Sources/Resources/Localizable.xcstrings
+++ b/Clef/Sources/Resources/Localizable.xcstrings
@@ -315,6 +315,9 @@
         }
       }
     },
+    "Folder Not Found" : {
+
+    },
     "Folders" : {
       "localizations" : {
         "ko" : {
@@ -345,16 +348,6 @@
         }
       }
     },
-    "Import scores to your library first" : {
-      "localizations" : {
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "먼저 라이브러리에 악보를 가져오세요"
-          }
-        }
-      }
-    },
     "Import Score" : {
       "localizations" : {
         "ko" : {
@@ -371,6 +364,16 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "악보를 가져와서 이 폴더로 이동하세요"
+          }
+        }
+      }
+    },
+    "Import scores to your library first" : {
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "먼저 라이브러리에 악보를 가져오세요"
           }
         }
       }
@@ -776,7 +779,7 @@
       }
     },
     "Select" : {
-      "extractionState" : "stale",
+      "extractionState" : "manual",
       "localizations" : {
         "ko" : {
           "stringUnit" : {
@@ -911,22 +914,22 @@
         }
       }
     },
-    "Unknown Composer" : {
-      "localizations" : {
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "알 수 없는 작곡가"
-          }
-        }
-      }
-    },
     "Unfavorite" : {
       "localizations" : {
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "즐겨찾기 해제"
+          }
+        }
+      }
+    },
+    "Unknown Composer" : {
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "알 수 없는 작곡가"
           }
         }
       }
