feat: Add new folder/program cards to FolderDetailView and fix iPad orientation plist

--- a/Clef/Sources/Resources/Localizable.xcstrings
+++ b/Clef/Sources/Resources/Localizable.xcstrings
@@ -275,6 +275,7 @@
       }
     },
     "Empty Folder" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ko" : {
           "stringUnit" : {
@@ -359,6 +360,7 @@
       }
     },
     "Import scores and move them to this folder" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ko" : {
           "stringUnit" : {
