chore: Add Korean translation for new Add count LocalizedStringKey

--- a/Clef/Sources/Resources/Localizable.xcstrings
+++ b/Clef/Sources/Resources/Localizable.xcstrings
@@ -23,6 +23,16 @@
         }
       }
     },
+    "Add (%lld)" : {
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "추가 (%lld)"
+          }
+        }
+      }
+    },
     "Add at least one score to play this program." : {
       "localizations" : {
         "ko" : {
